--- a/requirements.txt
+++ b/requirements.txt
@@ -104,6 +104,7 @@ smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
+setuptools>=65.5.1
 sympy==1.13.0
 tenacity==8.5.0
 terminado==0.18.1
