--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ psutil==6.0.0
 py-cpuinfo==9.0.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-pytesseract==0.3.10
+python-doctr==0.9.0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
